feat: add background icons

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,17 +2,19 @@
 
 html,
 body {
-  background-color: theme("colors.bg");
-  color: theme("colors.text");
-  font-family: theme("fontFamily.text");
+  background-color: theme('colors.bg');
+  color: theme('colors.text');
+  font-family: theme('fontFamily.text');
   font-weight: 400;
   font-size: 36px;
   @apply .antialiased;
   @apply .leading-snug;
 }
 
-body {
-  padding: 64px;
+.bg-icon {
+  width: 1440px;
+  position: absolute;
+  opacity: 0.025;
 }
 
 @tailwind components;
