feat: add strengths section
- add icon assets
- add additional space entries to tailwind config
- create SkillCarousel component
- create SkillGrid component
- add component-size hook library
- add classNames library
- improve responsive design
- remove redundant .bg-icon css class
- create Text components (H1, H2, Highlight)

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,6 @@
 @tailwind base;
 
-html,
-body {
+html {
   background-color: theme('colors.bg');
   color: theme('colors.text');
   font-family: theme('fontFamily.text');
@@ -9,12 +8,6 @@ body {
   font-size: 36px;
   @apply .antialiased;
   @apply .leading-snug;
-}
-
-.bg-icon {
-  width: 1440px;
-  position: absolute;
-  opacity: 0.025;
 }
 
 @tailwind components;
