--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,15 @@ html {
   @apply .leading-snug;
 }
 
+.anim-scale {
+  transform: scale(1);
+  transition: transform 0.5s ease;
+}
+
+.anim-scale:hover {
+  transform: scale(1.1);
+}
+
 @tailwind components;
 
 @tailwind utilities;
